.metadata/.plugins/org.eclipse.cdt.ui/i2c-twostm.build.log
10:07:45 **** Build of configuration Debug for project i2c-twostm ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F091xC -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:13: error: 'str' undeclared (first use in this function)
  106 |     sprintf(str, "%8d\r\n", RxData);
      |             ^~~
../Core/Src/main.c:106:13: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:72:10: warning: unused variable 'buf' [-Wunused-variable]
   72 |  uint8_t buf[12];
      |          ^~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:07:45 Build Failed. 2 errors, 1 warnings. (took 360ms)

